test/AssociatedTypeInference/associated_type_inference_generic_class.code
// RUN: %target-typecheck-verify-language

class C<T> {}

protocol P {
  associatedtype A: C<B> // expected-note 2{{protocol requires nested type 'A'}}
  associatedtype B // expected-note 2{{protocol requires nested type 'B'}}

  fn f() -> A
  fn g() -> B
}

class D: C<Int> {}

struct S11: P {
  typealias A = C<Int>
  typealias B = Int

  fn f() -> C<Int> { fatalError() }
  fn g() -> Int { fatalError() }
}

struct S12: P {
  typealias A = D
  typealias B = Int

  fn f() -> D { fatalError() }
  fn g() -> Int { fatalError() }
}

struct S21: P {
  typealias A = C<Int>

  fn f() -> C<Int> { fatalError() }
  fn g() -> Int { fatalError() }
}

struct S22: P {
  typealias A = D

  fn f() -> D { fatalError() }
  fn g() -> Int { fatalError() }
}

struct S31: P {
  typealias B = Int

  fn f() -> C<Int> { fatalError() }
  fn g() -> Int { fatalError() }
}

struct S32: P {
  typealias B = Int

  fn f() -> D { fatalError() }
  fn g() -> Int { fatalError() }
}

struct S41: P {
  fn f() -> C<Int> { fatalError() }
  fn g() -> Int { fatalError() }
}

struct S42: P {
  fn f() -> D { fatalError() }
  fn g() -> Int { fatalError() }
}

struct SBad1: P { // expected-error {{type 'SBad1' does not conform to protocol 'P'}} expected-note {{add stubs for conformance}}
  fn f() -> D { fatalError() }
  fn g() -> String { fatalError() }
}

struct SBad2: P { // expected-error {{type 'SBad2' does not conform to protocol 'P'}} expected-note {{add stubs for conformance}}
  fn f() -> C<Int> { fatalError() }
  fn g() -> String { fatalError() }
}

protocol Q {
  associatedtype A: C<Self>

  fn f() -> A
}

extension Q {
  fn f() -> C<Self> { fatalError() }
}

struct QQ: Q {}